[package]
name = "tcx-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-primitive = { path = "../tcx-primitive" }
tcx-crypto = { path = "../tcx-crypto"}
tcx-constants = { path = "../tcx-constants"}
#tcx-eth = {path = "../tcx-eth"}
tcx-chain = {path = "../tcx-chain"}

failure = "0.1.8"
prost = "0.11.2"
prost-types = "0.11.2"
tiny-bip39 = "1.0.0"
eth-keystore = "0.5.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
bitcoin = "0.29.2"
sha2 = "0.10.6"
hmac-sha256 = "1.1.6"
secp256k1 = {version ="0.24.1", features = ["rand", "recovery"] }
multihash = "0.18.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"