[package]
name = "tcx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcx-keystore = { path = "../tcx-keystore", default-features = false }
tcx-eth = { path = "../tcx-eth", default-features = false }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive", default-features = false }
tcx-common = { path = "../tcx-common" }

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.88"
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.89"
anyhow = { version = "=1.0.79" }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
