[package]
name = "tcx-wasm"
version = "0.6.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tcx-keystore = { path = "../tcx-keystore", default-features = false }
tcx-eth = { path = "../tcx-eth", default-features = false }
tcx-tron = { path = "../tcx-tron", default-features = false }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive", default-features = false }
tcx-common = { path = "../tcx-common" }

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.88"
js-sys = "0.3"
serde = { version = "=1.0.147", features = ["derive"] }
serde_json = "=1.0.89"
anyhow = { version = "=1.0.79" }
tcx-crypto = { path = "../tcx-crypto" }

secp256k1 = { version = "=0.24.3", features = ["rand"] }
bitcoin = "=0.29.2"
sha2 = "=0.10.6"
base64 = "=0.13.1"
hkdf = "=0.12.3"
hmac = "=0.12.1"
chacha20 = "0.9"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
