[package]
name = "tcx"
version = "0.1.0"
authors = ["Neal Xu <imxuneal@gmail.com>"]
edition = "2021"

[dependencies]
tcx-proto = { path = "../tcx-proto" }
tcx-crypto = { path = "../tcx-crypto", features = ["cache_dk"] }
tcx-keystore = { path = "../tcx-keystore", features = ["cache_dk"] }
tcx-btc-kin = { path = "../tcx-btc-kin" }
tcx-tron = { path = "../tcx-tron" }
tcx-ckb = { path = "../tcx-ckb" }
tcx-filecoin = { path = "../tcx-filecoin" }
tcx-substrate = { path = "../tcx-substrate" }
tcx-atom = { path = "../tcx-atom" }
tcx-eos = { path = "../tcx-eos" }
tcx-primitive = { path = "../tcx-primitive" }
tcx-constants = { path = "../tcx-constants" }
tcx-tezos = { path = "../tcx-tezos" }
tcx-eth2 = { path = "../tcx-eth2" }
tcx-eth = { path = "../tcx-eth" }
tcx-common = { path = "../tcx-common" }
tcx-migration = { path = "../tcx-migration" }
tcx-ton = { path = "../tcx-ton" }
#zksync-crypto = { git="https://github.com/consenlabs/zksync", branch="hotfix/compatible_with_tcx" }

prost = "=0.14.3"
bytes = "=1.11.1"
prost-types = "=0.14.3"

libc = "=0.2.186"
log = "=0.4.29"
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
anyhow = { version = "=1.0.102", features = [] }
lazy_static = "=1.5.0"
hex = "=0.4.3"
base64 = "=0.22.1"
base58 = "=0.2.0"
parking_lot = "=0.12.5"
ethereum-types = "=0.16.0"
strum = { version = "=0.28.0", features = ["derive"] }
sp-core = "=41.0.0"
schnorrkel = "=0.11.5"

[lib]
name = "tcx"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "=0.14.3"

[dev-dependencies]
serial_test = "=3.4.0"
sp-core = "=41.0.0"
sp-runtime = "=47.0.0"
