[package]
name = "coin-bitcoin"
version = "0.1.0"
authors = ["xiaoguang101010 <xiaoguang101010@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ikc-common = {path = "../../ikc-common"}
ikc-device = {path = "../../ikc-device"}
ikc-transport = {path = "../../ikc-transport"}
bitcoin = "=0.32.9"
hex = "=0.4.3"
secp256k1 = {version = "=0.31.1", features = ["rand", "recovery"] }
bitcoin_hashes = "=0.20.0"
num-bigint = "=0.4.6"
anyhow = "=1.0.102"
bytes = "=1.11.1"
prost = "=0.14.3"
prost-types = "=0.14.3"
bech32 = "=0.11.1"
base64 = "=0.22.1"